[gd_scene load_steps=7 format=3 uid="uid://ba7xpfm2o2ah6"]

[ext_resource type="Theme" uid="uid://i8eh517uqjrl" path="res://scary_theme.tres" id="1_i7c8a"]
[ext_resource type="Script" uid="uid://dig0op5pmqcpc" path="res://script/HUD/PlayerStatisticsHUD.gd" id="2_mc0f5"]
[ext_resource type="Texture2D" uid="uid://b30cpnxrxpokq" path="res://sprite/progress_bar/hunger_bar_mini_under.png" id="3_pi1e6"]
[ext_resource type="Texture2D" uid="uid://cyjmpo4oiqko7" path="res://sprite/progress_bar/hunger_bar_mini_progress.png" id="4_m2h1x"]
[ext_resource type="Texture2D" uid="uid://ciyqfj1cnf8s2" path="res://sprite/progress_bar/desperation_bar_mini_under.png" id="5_eoyr2"]
[ext_resource type="Texture2D" uid="uid://cg1y27gg2wgvg" path="res://sprite/progress_bar/desperation_bar_mini_progress.png" id="6_wo6t1"]

[node name="PlayerStatisticsHUD" type="HBoxContainer"]
z_index = 2000
offset_right = 26.0
offset_bottom = 4.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_i7c8a")
theme_override_constants/separation = 2
script = ExtResource("2_mc0f5")

[node name="DesperationBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_under = ExtResource("5_eoyr2")
texture_progress = ExtResource("6_wo6t1")

[node name="HungerBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_under = ExtResource("3_pi1e6")
texture_progress = ExtResource("4_m2h1x")
